--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@litert/eslint-plugin-rules",
-  "version": "0.1.7",
+  "version": "0.2.0",
   "description": "The custom ESLint rules for LiteRT projects",
   "keywords": [
     "eslint",
@@ -24,15 +24,15 @@
   },
   "homepage": "https://github.com/litert/eslint-rules.js#readme",
   "devDependencies": {
-    "eslint-plugin-eslint-plugin": "^5.1.1",
-    "eslint-plugin-node": "^11.1.0",
-    "mocha": "^10.2.0"
+    "eslint-plugin-eslint-plugin": "^6.3.1",
+    "eslint-plugin-node": "^11.1.0"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^7.3.1",
-    "@typescript-eslint/parser": "^7.3.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-deprecation": "^2.0.0"
+    "@eslint/js": "^9.13.0",
+    "@stylistic/eslint-plugin": "^2.9.0",
+    "@types/eslint__js": "^8.42.3",
+    "eslint": "^9.13.0",
+    "typescript-eslint": "^8.11.0"
   },
   "engines": {
     "node": "12.x || 14.x || >= 16"
